samples/_failures_safe/1761498233_465c63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ea4f838.c: In function ‘main’:
./samples/SAFE/__tmp_3ea4f838.c:137:43: error: expected ‘)’ at end of input
  137 |     if (fgets(input, sizeof(input), stdin)
      |        ~                                  ^
      |                                           )
./samples/SAFE/__tmp_3ea4f838.c:137:5: error: expected declaration or statement at end of input
  137 |     if (fgets(input, sizeof(input), stdin)
      |     ^~
